# modelo_universidad_kedro

./: README.md  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml  parameters_modelo_universidad.yml
docs/source/: conf.py  index.rst
models/: modelo_clasificacion_rf.pkl
notebooks/: 01_exploratory_analysis.ipynb  02_supervised_modeling.ipynb
src/evaluacion2_universidad/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/evaluacion2_universidad/pipelines/modelo_universidad/: __init__.py  nodes.py  pipeline.py
src/evaluacion2_universidad/pipelines/reporting/: nodes.py  pipeline.py
tests/pipelines/data_science/: test_pipeline.py
tests/pipelines/modelo_universidad/: test_pipeline.py
